# SensorPanelPK

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  STM32F746ZETX_FLASH.ld  STM32F746ZETX_RAM.ld  load.cmd  new.cmd
schematic/panel_board_v1.1/: 687254.007 СП_Пл сенсорн панели_V1.doc  ПКЕЛ_687254_007.dch  ПКЕЛ_687254_007.dip
schematic/panel_board_v1.1/gerber/: 687254.007-100_Пл сенc панели_V1.brd  687254.007-100_Пл сенc панели_V1.drl  687254.007-100_Пл сенc панели_V1.gbl  687254.007-100_Пл сенc панели_V1.gbo  687254.007-100_Пл сенc панели_V1.gtl  687254.007-100_Пл сенc панели_V1.gto  687254.007-100_Пл сенc панели_V1.mbs  687254.007-100_Пл сенc панели_V1.mts
schematic/usb_board/: ПКЕЛ_687253_011.dch  ПКЕЛ_687253_011.dip
schematic/usb_board/gerber/: 687253_011_плата_USB.brd  687253_011_плата_USB.drl  687253_011_плата_USB.gbl  687253_011_плата_USB.gbo  687253_011_плата_USB.gbr  687253_011_плата_USB.gbs
src/: FreeRTOSConfig.h  freertos.cpp  freertos.hpp  main.cpp  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.cpp  syscalls.cpp
src/VA_GUI/: VATouch.cpp  VATouch.hpp  VA_LCD.cpp  VA_LCD.hpp
src/VA_GUI/Elements/: VABaseElement.cpp  VABaseElement.hpp  VAGraphics.hpp  VAGraphics.ipp  VAIndicator.cpp  VAIndicator.hpp  VALabel.cpp  VALabel.hpp
src/VA_GUI/Fonts/: Fonts.cpp  Fonts.hpp  TypeDefsFont.h
src/VA_GUI/Fonts/TimesNewRoman/: TimesNewRoman.h
src/VA_GUI/Geometric/: VAGeometric.cpp  VAGeometric.hpp
src/code/: EventInit.cpp  Loop.cpp  Loop.h
src/code/VA_EEPROM_AT25640/: VA_EEPROM_AT25640.cpp
src/code/VA_GUI/: VAGUI.cpp
src/code/VA_GUI/Adafruit_RA8875/: Adafruit_RA8875.cpp  Adafruit_RA8875.h
src/code/VA_GUI/Elements/: VABaseElement.h
src/code/VA_GUI/Elements/Graphics/: Graphics.cpp  Graphics.h
src/code/VA_GUI/Elements/VADisplay/: VADisplay.cpp  VADisplay.h
src/code/VA_GUI/Elements/VAIndicator/: VAIndicator.cpp
src/code/VA_GUI/Elements/VALabel/: VALabel.cpp  VALabel.h
src/code/VA_Modbus/: VA_Modbus.cpp  VA_Modbus.h
src/code/devices/: AnalogBlock.h  BaseDevice.h  DeviceB118.h  DeviceBKI.h
src/code/screens/: ScreenAnalogCoef.h  ScreenAnalogPl.h  ScreenAnalogTestIO.h  ScreenBKI.h  ScreenBattery.h  ScreenCOM.cpp  ScreenCOM.h  ScreenContrlInsulation.h  ScreenCrash.h  ScreenEvents.h  ScreenGlobal.h  ScreenMain.h  ScreenMenu.h  ScreenSetAnalogPl.h  ScreenSetBKI.h  ScreenSetTime.cpp  ScreenSetTime.h  ScreenSettZVU.h  ScreenZVU.h
src/core/: dma.c  fmc.c  freertos.c  gpio.c  iwdg.c  main.c  main.h  rtc.c  spi.c  tim.c  tim.h  usart.c  usart.h
src/drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f7xx.h
src/drivers/RA8875/: RA8875.cpp  RA8875.hpp
src/drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_def.h
src/drivers/VA_RA8875/: VA_RA8875.cpp  VA_RA8875.hpp
src/peripheral/: clock.cpp  dma.cpp  fmc.cpp  gpio.cpp  iwdg.cpp  pinit.hpp  pins.hpp  rtc.cpp  spi.cpp  system.cpp  tim.cpp  usart.cpp
